--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from splinter import Browser\n",
     "import time\n",
+    "import requests\n",
+    "from PIL import Image\n",
     "#browser = Browser('chrome', executable_path, headless=False)"
    ]
   },
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,88 +178,6 @@
     "            if len(image_urls) >= max_links_to_fetch:\n",
     "                print(f\"Found: {len(image_urls)} image links, done!\")\n",
     "                break\n",
-    "    #     else:\n",
-    "    #         print(\"Found:\", len(image_urls), \"image links, looking for more ...\")\n",
-    "    #         time.sleep(30)\n",
-    "    #         return\n",
-    "    #         load_more_button = wd.find_element_by_css_selector(\".mye4qd\")\n",
-    "    #         if load_more_button:\n",
-    "    #             wd.execute_script(\"document.querySelector('.mye4qd').click();\")\n",
-    "\n",
-    "    #     # move the result startpoint further down\n",
-    "    #     results_start = len(thumbnail_results)\n",
-    "\n",
-    "    # return image_urls\n",
-    "    #wd.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "working\n",
-      "Found: 100 search results. Extracting links from 0:100\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "fetch_images(executable_path,\"Dogs\",60,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fetch_image_urls(query:str, max_links_to_fetch:int, wd:webdriver, sleep_between_interactions:int=1):\n",
-    "    def scroll_to_end(wd):\n",
-    "        wd.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "        time.sleep(sleep_between_interactions)    \n",
-    "    \n",
-    "    # build the google query\n",
-    "    search_url = \"https://www.google.com/search?safe=off&site=&tbm=isch&source=hp&q={q}&oq={q}&gs_l=img\"\n",
-    "\n",
-    "    # load the page\n",
-    "    wd.get(search_url.format(q=query))\n",
-    "\n",
-    "    image_urls = set()\n",
-    "    image_count = 0\n",
-    "    results_start = 0\n",
-    "    while image_count < max_links_to_fetch:\n",
-    "        scroll_to_end(wd)\n",
-    "\n",
-    "        # get all image thumbnail results\n",
-    "        thumbnail_results = wd.find_elements_by_css_selector(\"img.Q4LuWd\")\n",
-    "        number_results = len(thumbnail_results)\n",
-    "        \n",
-    "        print(f\"Found: {number_results} search results. Extracting links from {results_start}:{number_results}\")\n",
-    "        \n",
-    "        for img in thumbnail_results[results_start:number_results]:\n",
-    "            # try to click every thumbnail such that we can get the real image behind it\n",
-    "            try:\n",
-    "                img.click()\n",
-    "                time.sleep(sleep_between_interactions)\n",
-    "            except Exception:\n",
-    "                continue\n",
-    "\n",
-    "            # extract image urls    \n",
-    "            actual_images = wd.find_elements_by_css_selector('img.n3VNCb')\n",
-    "            for actual_image in actual_images:\n",
-    "                if actual_image.get_attribute('src') and 'http' in actual_image.get_attribute('src'):\n",
-    "                    image_urls.add(actual_image.get_attribute('src'))\n",
-    "\n",
-    "            image_count = len(image_urls)\n",
-    "\n",
-    "            if len(image_urls) >= max_links_to_fetch:\n",
-    "                print(f\"Found: {len(image_urls)} image links, done!\")\n",
-    "                break\n",
     "        else:\n",
     "            print(\"Found:\", len(image_urls), \"image links, looking for more ...\")\n",
     "            time.sleep(30)\n",
@@ -269,7 +189,38 @@
     "        # move the result startpoint further down\n",
     "        results_start = len(thumbnail_results)\n",
     "\n",
-    "    return image_urls"
+    "    return image_urls\n",
+    "    #wd.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "working\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
+      "1\n",
+      "Found: 1 image links, done!\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "fetch_images(executable_path,\"Dogs\",60,1)"
    ]
   },
   {
