can grab multiple url links for images

--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,10 +150,9 @@
     "    image_urls = set()\n",
     "    image_count = 0\n",
     "    results_start = 0\n",
-    "    print(\"working\")\n",
     "\n",
     "    while image_count < max_links_to_fetch:\n",
-    "        scroll_to_end(wd,s_interactions)\n",
+    "        #scroll_to_end(wd,s_interactions)\n",
     "\n",
     "        # get all image thumbnail results\n",
     "        thumbnail_results = wd.find_by_css(\"img.Q4LuWd\")\n",
@@ -192,6 +191,7 @@
     "\n",
     "        # move the result startpoint further down\n",
     "        results_start = len(thumbnail_results)\n",
+    "        wd.quit()\n",
     "\n",
     "    return image_urls\n",
     "    #wd.quit()"
@@ -280,18 +280,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'fetch_images' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-a0ee60c478c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;31m#print(row[3])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mrapper_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[0mfetch_images\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexecutable_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrapper_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fetch_images' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Found: 48 search results. Extracting links from 0:48\n",
+      "1\n",
+      "Found: 1 image links, done!\n",
+      "Found: 48 search results. Extracting links from 0:48\n",
+      "1\n",
+      "Found: 1 image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1 image links, done!\n",
+      "Found: 48 search results. Extracting links from 0:48\n",
+      "1\n",
+      "Found: 1 image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1 image links, done!\n"
      ]
     }
    ],
@@ -305,7 +315,7 @@
     "    for row in reader:\n",
     "        #print(row[3])\n",
     "        rapper_name = row[3]\n",
-    "        fetch_images(executable_path,rapper_name,60,1)\n",
+    "        rapper_url = fetch_images(executable_path,rapper_name,3,1)\n",
     "\n",
     "\n"
    ]
