can download images now

--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,12 +147,12 @@
     "\n",
     "    \n",
     "    #parameter set up\n",
-    "    image_urls = set()\n",
+    "    image_urls = []\n",
     "    image_count = 0\n",
     "    results_start = 0\n",
     "\n",
     "    while image_count < max_links_to_fetch:\n",
-    "        #scroll_to_end(wd,s_interactions)\n",
+    "        scroll_to_end(wd,s_interactions)\n",
     "\n",
     "        # get all image thumbnail results\n",
     "        thumbnail_results = wd.find_by_css(\"img.Q4LuWd\")\n",
@@ -174,7 +174,7 @@
     "            actual_images = wd.find_by_css('img.n3VNCb')\n",
     "            for actual_image in actual_images:\n",
     "                if actual_image['src'] and 'http' in actual_image['src']:\n",
-    "                    image_urls.add(actual_image['src'])\n",
+    "                    image_urls.append(actual_image['src'])\n",
     "\n",
     "    #         image_count = len(image_urls)\n",
     "\n",
@@ -193,8 +193,7 @@
     "        results_start = len(thumbnail_results)\n",
     "        wd.quit()\n",
     "\n",
-    "    return image_urls\n",
-    "    #wd.quit()"
+    "    return image_urls\n"
    ]
   },
   {
@@ -253,6 +252,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def persist_image(folder_path:str,url:str):\n",
+    "    try:\n",
+    "        image_content = requests.get(url).content\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR - Could not download {url} - {e}\")\n",
+    "\n",
+    "    try:\n",
+    "        image_file = io.BytesIO(image_content)\n",
+    "        image = Image.open(image_file).convert('RGB')\n",
+    "        file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
+    "        with open(file_path, 'wb') as f:\n",
+    "            image.save(f, \"JPEG\", quality=85)\n",
+    "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR - Could not save {url} - {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def persist_image(folder_path:str,url:str,img_name=None):\n",
+    "    try:\n",
+    "        image_content = requests.get(url).content\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR - Could not download {url} - {e}\")\n",
+    "\n",
+    "    try:\n",
+    "        image_file = io.BytesIO(image_content)\n",
+    "        image = Image.open(image_file).convert('RGB')\n",
+    "\n",
+    "        if image_name is None:\n",
+    "            file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
+    "        else:\n",
+    "            file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "        with open(file_path, 'wb') as f:\n",
+    "            image.save(f, \"JPEG\", quality=85)\n",
+    "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR - Could not save {url} - {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -280,34 +331,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Found: 48 search results. Extracting links from 0:48\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "Found: 48 search results. Extracting links from 0:48\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "Found: 49 search results. Extracting links from 0:49\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "Found: 48 search results. Extracting links from 0:48\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "Found: 49 search results. Extracting links from 0:49\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
-      "Found: 1 image links, done!\n"
+      "Found: 1 image links, done!\n",
+      "[['https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg'], ['https://upload.wikimedia.org/wikipedia/commons/8/89/2_Chainz_at_Pretty_Girls_Like_Trap_Music_Tour.jpg'], ['https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472'], ['https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg'], ['https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg']]\n"
      ]
     }
    ],
    "source": [
     "file_path = os.path.join(\"hiphop3.csv\")\n",
-    "\n",
+    "rapper_urls= []\n",
     "with open(file_path) as rapper_data:\n",
     "    reader = csv.reader(rapper_data)\n",
     "    header = next(reader)\n",
@@ -316,6 +368,9 @@
     "        #print(row[3])\n",
     "        rapper_name = row[3]\n",
     "        rapper_url = fetch_images(executable_path,rapper_name,3,1)\n",
+    "        rapper_urls.append(rapper_url)\n",
+    "\n",
+    "print(rapper_urls)\n",
     "\n",
     "\n"
    ]
