--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -276,11 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def persist_image(folder_path:str,url:str,img_name=None):\n",
+    "def persist_image(folder_path,url,img_name):\n",
     "    try:\n",
     "        image_content = requests.get(url).content\n",
     "\n",
@@ -291,10 +291,12 @@
     "        image_file = io.BytesIO(image_content)\n",
     "        image = Image.open(image_file).convert('RGB')\n",
     "\n",
-    "        if image_name is None:\n",
-    "            file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
-    "        else:\n",
-    "            file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "        file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "\n",
+    "        # if image_name is None:\n",
+    "        #     file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
+    "        # else:\n",
+    "        #     file_path = os.path.join(folder_path,img_name + '.jpg')\n",
     "        with open(file_path, 'wb') as f:\n",
     "            image.save(f, \"JPEG\", quality=85)\n",
     "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
@@ -331,7 +333,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg - as ./test\\21_savage.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "persist_image(\"./test\", \"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg\",\"21_savage\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -341,19 +360,24 @@
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg - as ./test\\21 Savage.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/8/89/2_Chainz_at_Pretty_Girls_Like_Trap_Music_Tour.jpg - as ./test\\2 Chainz.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
+      "SUCCESS - saved https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472 - as ./test\\2Pac.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg - as ./test\\50 Cent.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "[['https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg'], ['https://upload.wikimedia.org/wikipedia/commons/8/89/2_Chainz_at_Pretty_Girls_Like_Trap_Music_Tour.jpg'], ['https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472'], ['https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg'], ['https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg']]\n"
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg - as ./test\\Ab-Soul.jpg\n",
+      "[]\n"
      ]
     }
    ],
@@ -368,7 +392,9 @@
     "        #print(row[3])\n",
     "        rapper_name = row[3]\n",
     "        rapper_url = fetch_images(executable_path,rapper_name,3,1)\n",
-    "        rapper_urls.append(rapper_url)\n",
+    "        persist_image(\"./test\",rapper_url[0],rapper_name)\n",
+    "\n",
+    "        #rapper_urls.append(rapper_url)\n",
     "\n",
     "print(rapper_urls)\n",
     "\n",
