replace white spaces of saved images with - using replace

--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -28,15 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "executable_path = {'executable_path': 'chromedriver.exe'}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from splinter import Browser\n",
     "import time\n",
     "import requests\n",
@@ -50,74 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.visit('http://google.com')\n",
-    "browser.fill('q', 'splinter - python acceptance testing for web applications')\n"
+    "executable_path = {'executable_path': 'chromedriver.exe'}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.find_by_name('btnK').click()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Yes, found it! :)\n"
-     ]
-    }
-   ],
-   "source": [
-    "if browser.is_text_present('splinter.readthedocs.io'):\n",
-    "    print(\"Yes, found it! :)\")\n",
-    "else:\n",
-    "    print(\"No, didn't find it :(\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from splinter import Browser\n",
-    "\n",
-    "browser = Browser('chrome', executable_path, headless=False) # defaults to firefox\n",
-    "browser.visit('http://google.com')\n",
-    "browser.fill('q', 'Dogs')\n",
-    "browser.find_by_name('btnK').click()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#browser.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,55 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def persist_image(folder_path:str,url:str):\n",
-    "    try:\n",
-    "        image_content = requests.get(url).content\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"ERROR - Could not download {url} - {e}\")\n",
-    "\n",
-    "    try:\n",
-    "        image_file = io.BytesIO(image_content)\n",
-    "        image = Image.open(image_file).convert('RGB')\n",
-    "        file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
-    "        with open(file_path, 'wb') as f:\n",
-    "            image.save(f, \"JPEG\", quality=85)\n",
-    "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"ERROR - Could not save {url} - {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def persist_image(folder_path:str,url:str):\n",
-    "    try:\n",
-    "        image_content = requests.get(url).content\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"ERROR - Could not download {url} - {e}\")\n",
-    "\n",
-    "    try:\n",
-    "        image_file = io.BytesIO(image_content)\n",
-    "        image = Image.open(image_file).convert('RGB')\n",
-    "        file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
-    "        with open(file_path, 'wb') as f:\n",
-    "            image.save(f, \"JPEG\", quality=85)\n",
-    "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"ERROR - Could not save {url} - {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,44 +176,22 @@
     "        image_file = io.BytesIO(image_content)\n",
     "        image = Image.open(image_file).convert('RGB')\n",
     "\n",
-    "        file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "        picture_path = img_name.replace(\" \", \"-\")\n",
+    "        print(picture_path)\n",
     "\n",
-    "        # if image_name is None:\n",
-    "        #     file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
-    "        # else:\n",
-    "        #     file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "        #file_path = os.path.join(folder_path,picture_path + '.jpg')\n",
+    "        #file_path = os.path.join(folder_path,img_name + '.jpg')\n",
+    "\n",
+    "\n",
+    "        if img_name is None:\n",
+    "            file_path = os.path.join(folder_path,hashlib.sha1(image_content).hexdigest()[:10] + '.jpg')\n",
+    "        else:\n",
+    "            file_path = os.path.join(folder_path,picture_path + '.jpg')\n",
     "        with open(file_path, 'wb') as f:\n",
     "            image.save(f, \"JPEG\", quality=85)\n",
     "        print(f\"SUCCESS - saved {url} - as {file_path}\")\n",
     "    except Exception as e:\n",
     "        print(f\"ERROR - Could not save {url} - {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "SUCCESS - saved https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg - as .\\b61b601eea.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "persist_image(\".\",\"https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg\"\n",
-    "#requests.get(url).content"
    ]
   },
   {
@@ -350,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,24 +223,32 @@
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/21_Savage_2018.jpg/1200px-21_Savage_2018.jpg - as ./test\\21 Savage.jpg\n",
+      "['https://ichef.bbci.co.uk/news/976/cpsprodpb/11DF7/production/_105470237_mediaitem105470234.jpg']\n",
+      "21-Savage\n",
+      "SUCCESS - saved https://ichef.bbci.co.uk/news/976/cpsprodpb/11DF7/production/_105470237_mediaitem105470234.jpg - as ./test\\21-Savage.jpg\n",
+      "Found: 100 search results. Extracting links from 0:100\n",
+      "1\n",
+      "Found: 0 image links, looking for more ...\n",
+      "None\n",
+      "'NoneType' object is not subscriptable\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/8/89/2_Chainz_at_Pretty_Girls_Like_Trap_Music_Tour.jpg - as ./test\\2 Chainz.jpg\n",
-      "Found: 100 search results. Extracting links from 0:100\n",
-      "1\n",
-      "Found: 1 image links, done!\n",
+      "['https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472']\n",
+      "2Pac\n",
       "SUCCESS - saved https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472 - as ./test\\2Pac.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg - as ./test\\50 Cent.jpg\n",
+      "['https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg']\n",
+      "50-Cent\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg - as ./test\\50-Cent.jpg\n",
       "Found: 100 search results. Extracting links from 0:100\n",
       "1\n",
       "Found: 1 image links, done!\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg - as ./test\\Ab-Soul.jpg\n",
-      "[]\n"
+      "['https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg']\n",
+      "Ab-Soul\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/5/53/Ab-Soul_-_These_Days_Tour_2014_%28cropped%29.jpg - as ./test\\Ab-Soul.jpg\n"
      ]
     }
    ],
@@ -390,13 +261,19 @@
     "\n",
     "    for row in reader:\n",
     "        #print(row[3])\n",
-    "        rapper_name = row[3]\n",
+    "        rapper_name = f'{row[3]} rapper' \n",
     "        rapper_url = fetch_images(executable_path,rapper_name,3,1)\n",
-    "        persist_image(\"./test\",rapper_url[0],rapper_name)\n",
+    "        print(rapper_url)\n",
+    "        try:\n",
+    "            persist_image(\"./test\",rapper_url[0],rapper_name)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "\n",
     "\n",
     "        #rapper_urls.append(rapper_url)\n",
     "\n",
-    "print(rapper_urls)\n",
+    "#print(rapper_urls)\n",
     "\n",
     "\n"
    ]
