--- a/Day7/scrape.ipynb
+++ b/Day7/scrape.ipynb
@@ -604,43 +604,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Found: 48 search results. Extracting links from 0:48\n",
-      "1\n",
-      "Found: 1, 21 Savage image links, done!\n",
-      "Found: 48 search results. Extracting links from 0:48\n",
-      "1\n",
-      "Found: 1, 2 Chainz image links, done!\n",
-      "Found: 48 search results. Extracting links from 0:48\n",
-      "1\n",
-      "Found: 1, 2Pac image links, done!\n",
-      "Found: 48 search results. Extracting links from 0:48\n",
-      "1\n",
-      "Found: 1, 50 Cent image links, done!\n",
       "Found: 49 search results. Extracting links from 0:49\n",
       "1\n",
-      "Found: 0 image links, looking for more ...\n",
-      "list index out of range\n",
+      "Found: 1, Brockhampton image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1, Brother Ali image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1, Bun B image links, done!\n",
       "Found: 48 search results. Extracting links from 0:48\n",
       "1\n",
-      "Found: 1, Action Bronson image links, done!\n",
+      "Found: 1, Busdriver image links, done!\n",
       "Found: 49 search results. Extracting links from 0:49\n",
       "1\n",
-      "Found: 0 image links, looking for more ...\n",
-      "list index out of range\n",
+      "Found: 1, Busta Rhymes image links, done!\n",
       "Found: 49 search results. Extracting links from 0:49\n",
       "1\n",
-      "Found: 1, A$AP Rocky image links, done!\n",
+      "Found: 1, Cam'ron image links, done!\n",
       "Found: 49 search results. Extracting links from 0:49\n",
       "1\n",
-      "Found: 1, A$AP Ferg image links, done!\n",
-      "[{'url': 'https://ichef.bbci.co.uk/news/976/cpsprodpb/11DF7/production/_105470237_mediaitem105470234.jpg', 'name': '21 Savage'}, {'url': 'https://i.ytimg.com/vi/e2QKlmMT8II/maxresdefault.jpg', 'name': '2 Chainz'}, {'url': 'https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472', 'name': '2Pac'}, {'url': 'https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg', 'name': '50 Cent'}, 'https://upload.wikimedia.org/wikipedia/en/thumb/a/a6/Pok%C3%A9mon_Pikachu_art.png/220px-Pok%C3%A9mon_Pikachu_art.png', {'url': 'https://upload.wikimedia.org/wikipedia/commons/3/34/Action_Bronson_Gov_Ball_2016_%28cropped%29.jpg', 'name': 'Action Bronson'}, 'https://upload.wikimedia.org/wikipedia/en/thumb/a/a6/Pok%C3%A9mon_Pikachu_art.png/220px-Pok%C3%A9mon_Pikachu_art.png', {'url': 'https://www.gannett-cdn.com/presto/2019/08/03/USAT/837b6337-3704-4d98-b244-792749ba0259-AFP_AFP_1JA3TY.JPG', 'name': 'A$AP Rocky'}, {'url': 'https://www.rap-up.com/app/uploads/2020/09/asap-ferg-glasses.jpg', 'name': 'A$AP Ferg'}]\n"
+      "Found: 1, Canibus image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1, Childish Gambino image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1, Clipse image links, done!\n",
+      "Found: 49 search results. Extracting links from 0:49\n",
+      "1\n",
+      "Found: 1, Common image links, done!\n"
      ]
     }
    ],
@@ -656,7 +656,7 @@
     "    #read a specific row\n",
     "    reader_list = list(reader)\n",
     "\n",
-    "    for row in reader_list[1:10]:\n",
+    "    for row in reader_list[22:32]:\n",
     "        #print(row[3])\n",
     "        rapper_name = row[4] \n",
     "        rapper_search = f'{row[4]} rapper' \n",
@@ -718,29 +718,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['Machine Gun Kelly',\n",
-       " 'Meek Mill',\n",
-       " 'NF',\n",
-       " 'Puff Daddy',\n",
-       " 'Rick Ross',\n",
-       " 'RZA',\n",
-       " 'ScHoolboy Q',\n",
-       " '$uicideboy$',\n",
-       " 'A Tribe Called Quest',\n",
-       " 'Tyga',\n",
-       " 'Watsky',\n",
-       " 'Wu-Tang Clan']"
+       "['Ab-Soul', 'Aesop Rock', 'Big Daddy Kane', 'A Boogie wit da Hoodie']"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 29
     }
    ],
    "source": [
@@ -749,22 +738,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "SUCCESS - saved https://ichef.bbci.co.uk/news/976/cpsprodpb/11DF7/production/_105470237_mediaitem105470234.jpg - as ./assets/images\\21-savage.jpg\n",
-      "SUCCESS - saved https://i.ytimg.com/vi/e2QKlmMT8II/maxresdefault.jpg - as ./assets/images\\2-chainz.jpg\n",
-      "SUCCESS - saved https://i.guim.co.uk/img/media/c1f430159c3e7e58c9b46098efde3dee7ba7d830/0_196_2515_1509/master/2515.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=f554bca9c12ca49c79264bce18b42472 - as ./assets/images\\2pac.jpg\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/a/a3/50_Cent_AKA_Curtis_Jackson_%28cropped%29.jpg - as ./assets/images\\50-cent.jpg\n",
-      "string indices must be integers\n",
-      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/3/34/Action_Bronson_Gov_Ball_2016_%28cropped%29.jpg - as ./assets/images\\action-bronson.jpg\n",
-      "string indices must be integers\n",
-      "SUCCESS - saved https://www.gannett-cdn.com/presto/2019/08/03/USAT/837b6337-3704-4d98-b244-792749ba0259-AFP_AFP_1JA3TY.JPG - as ./assets/images\\a$ap-rocky.jpg\n",
-      "SUCCESS - saved https://www.rap-up.com/app/uploads/2020/09/asap-ferg-glasses.jpg - as ./assets/images\\a$ap-ferg.jpg\n"
+      "SUCCESS - saved https://www.rollingstone.com/wp-content/uploads/2019/08/Brockhampton-2.jpg - as ./assets/images\\brockhampton.jpg\n",
+      "SUCCESS - saved https://cdn.tahoedailytribune.com/wp-content/uploads/sites/5/2020/02/BrotherAli-act-021420-860x1024.jpg - as ./assets/images\\brother-ali.jpg\n",
+      "SUCCESS - saved https://img.texasmonthly.com/2014/04/HR_BunBLHP_0514.jpg?auto=compress&crop=faces&fit=crop&fm=jpg&h=1650&ixlib=php-1.2.1&q=45&w=1300 - as ./assets/images\\bun-b.jpg\n",
+      "SUCCESS - saved https://consequenceofsound.net/wp-content/uploads/2018/04/busdriver.png?w=807 - as ./assets/images\\busdriver.jpg\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Out4Fame-Festival_2015_-_Busta_Rhymes_-_2_%28cropped%29.JPG/1200px-Out4Fame-Festival_2015_-_Busta_Rhymes_-_2_%28cropped%29.JPG - as ./assets/images\\busta-rhymes.jpg\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/6/6d/Cam%27ron_2014_%28Cropped%29.jpg - as ./assets/images\\cam'ron.jpg\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/d/d9/Canibus_at_Amager_Bio_4.jpg - as ./assets/images\\canibus.jpg\n",
+      "SUCCESS - saved https://i1.sndcdn.com/avatars-EJ9GGrkQ9typ3a0d-v74n4Q-t500x500.jpg - as ./assets/images\\childish-gambino.jpg\n",
+      "SUCCESS - saved https://cdn.vox-cdn.com/thumbor/oIBLHxTgNZgaR0tq2HCeSAybjZs=/0x0:648x324/1200x800/filters:focal(273x111:375x213)/cdn.vox-cdn.com/uploads/chorus_image/image/66007092/clipse.0.jpg - as ./assets/images\\clipse.jpg\n",
+      "SUCCESS - saved https://upload.wikimedia.org/wikipedia/commons/e/ea/Common_-_Ilosaarirock_2008.jpg - as ./assets/images\\common.jpg\n"
      ]
     }
    ],
